<resources>
    <string name="app_name">Gallery</string>
    <string name="label_options">Settings</string>
    <string name="label_save">Save</string>
    <string name="label_test_stitch">Stitch Panorama</string>
    <string name="message_stitching">Please Wait</string>
    <string name="options_dialog_title">Settings</string>
    <string name="stitching_finished">Panorama stitching is complete.</string>
    <string name="stitching_notification">Rendering panorama</string>
    <string name="currently_stitching">A panorama is already being stitched.</string>
    <string name="start_stitching">Stitching is in progress. You will be notified when it is complete.</string>
    <string name="stitch_background_option">Background stitching</string>
    <string name="panorama_options_text">Panorama options</string>
    <string name="cancel_button_text">"  Cancel  "</string>
    <string name="stitch_button_text">"  Stitch  "</string>
    <string name="stitching_note">" Note : stitching in the background may be slower but will free your device for other tasks. "</string>
    <string name="unable_to_load_photo">Sorry, this photo could not be loaded.</string>
    <string name="photo_is_not_a_pano">Sorry, this photo is not a usable panorama.</string>
    <string name="ok">OK</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started!</string>
    <string name="show_on_startup">Show this on start-up</string>
    <string name="confidential">CONFIDENTIAL</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="gallery">Gallery</string>
    <string name="downloading_panorama">Downloading panorama …</string>
    <string name="expanding_short_url">Expanding shortened URL …</string>
    <string name="cannot_display_pano">Cannot display panorama</string>
    <string name="cannot_create_image">Cannot create image</string>
    <string name="image_doesnt_contain_metadata">The image file does not contain the required panorama metadata.</string>
    <string name="image_file_could_not_be_read">Image file could not be read.</string>
    <string name="too_fast">Too fast</string>
    <string name="hit_target_to_start">Align to start</string>
    <string name="new_panorama">New Panorama</string>
    <string name="settings">Settings</string>
    <string name="help_n_tips">Help and Tips</string>
    <string name="help_ampersand_tips">Help &amp; Tips</string>
    <string name="my_panoramas">My Panoramas</string>
    <string name="feedback">Feedback</string>
    <string name="title_panoramas">Panoramas</string>
    <string name="title_unfinished">Unfinished</string>
    <string name="fetching_data_from_picasa">Fetching data from Picasa</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="success">Success</string>
    <string name="authentication_error">Authentication Error</string>
    <string name="select_google_account">Select a Google account</string>
    <string name="cannot_get_authtoken">Unable to get authentication token</string>
    <string name="share_pano_with">Share your panorama with</string>
    <string name="panorama_actions">Panorama actions</string>
    <string name="progress_authenticating">Authenticating</string>
    <string name="progress_creating_album">Creating album</string>
    <string name="progress_finding_album">Finding album</string>
    <string name="progress_uploading_pano">Uploading panorama</string>
    <string name="progress_fetching_pano_url">Fetching panorama URL</string>
    <string name="progress_shortening_pano_url">Shortening panorama URL</string>
    <string name="no_suitable_account_found">No suitable account found.</string>
    <string name="swipe_or_tap_for_next_tip">Swipe or tap for next tip</string>
    <string name="importing_existing_panos">Importing existing panoramas</string>
    <string name="deleting_pano">Deleting panorama</string>
    <string name="are_you_sure_you_want_to_delete_pano">Are you sure you want to delete this panorama?</string>
    <string name="collecting_session_data">Collecting session data</string>
    <string name="could_not_stitch_pano">Could not stitch panorama</string>
    <string name="no_source_directory">"Source directory doesn't exist."</string>
    <string name="stitch_unstitched_sessions">Stitch all unstitched sessions</string>
    <string name="you_have_x_unstitched_panos">"You have %d unstitched panoramas.

If you press OK, we will try to stitch them."</string>
    <string name="little_planet_stitching_complete">Stitching completed. Check your gallery.</string>
    <string name="donating_to_maps">Sending panorama to Maps …</string>
    <string name="cannot_send_to_maps">Cannot send to Maps due to missing GPS information.</string>
    <string name="successfully_sent_to_maps">Successfully sent to Maps. You will receive an e-mail.</string>
    <string name="cannot_share_to_maps_360">This panorama is cropped and cannot be shared to Maps.</string>
    <string name="general_settings">General settings</string>
    <string name="dogfood_settings">Dogfood settings</string>
    <string name="use_fast_shutter">Use fast shutter</string>
    <string name="use_fast_shutter_description">Use high speed shutter mode.</string>
    <string name="use_realtime_alignment">Use Realtime Alignment</string>
    <string name="use_realtime_alignment_description">Align the images while capturing them (Highly experimental).</string>
    <string name="display_live_camera_image">Display live camera image</string>
    <string name="display_live_camera_image_description">Show the live camera image.</string>
    <string name="use_gyro">Use Gyro</string>
    <string name="use_gyro_description">Use the gyro instead of vision to align the preview</string>
    <string name="alt_menu">Alternative Menu</string>
    <string name="alt_menu_description">A different main menu style. (Requires app restart to take effect)</string>
    <string name="allow_fast_motion">Allow faster motion</string>
    <string name="allow_fast_motion_description">Allow faster motion when hitting targets.</string>
    <string name="enable_location_provider">Store location</string>
    <string name="enable_location_provider_description">Whether to determine and store the location in the panorama files.</string>
    <string name="panorama_viewer_title">Panorama Viewer</string>
    <string name="panorama_expanding_short_url">Expanding shortened URL …</string>
    <string name="panorama_unable_to_load_photo">Sorry, this photo could not be loaded.</string>
    <string name="panorama_photo_is_not_a_pano">Sorry, this photo is not a usable panorama.</string>
    <string name="panorama_downloading_panorama">Downloading panorama …</string>
    <string name="panorama_cannot_display_pano">Cannot display panorama</string>
    <string name="panorama_image_doesnt_contain_metadata">The image file does not contain the required panorama metadata.</string>
    <string name="panorama_image_file_could_not_be_read">Image file could not be read.</string>
    <string name="panorama_cancel_button_text">"  Cancel  "</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">"Can't connect to the camera."</string>
    <string name="camera_disabled">Camera has been disabled because of security policies.</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Mount USB storage before using the camera.</string>
    <string name="preparing_sd">Preparing USB storage…</string>
    <string name="access_sd_fail">"Couldn't access USB storage."</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Store location</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="setting_off">Off</string>
    <string name="setting_on">On</string>
    <string name="setting_off_value">off</string>
    <string name="setting_on_value">on</string>
    <string name="pref_video_quality_title">Video quality</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_quality_entry_1080p">HD 1080p</string>
    <string name="pref_video_quality_entry_720p">HD 720p</string>
    <string name="pref_video_quality_entry_480p">SD 480p</string>
    <string name="pref_video_quality_entry_high">High</string>
    <string name="pref_video_quality_entry_low">Low</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Picture size</string>
    <string name="pref_camera_picturesize_entry_8mp">8M pixels</string>
    <string name="pref_camera_picturesize_entry_5mp">5M pixels</string>
    <string name="pref_camera_picturesize_entry_3mp">3M pixels</string>
    <string name="pref_camera_picturesize_entry_2mp">2M pixels</string>
    <string name="pref_camera_picturesize_entry_1_3mp">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1mp">1M pixels</string>
    <string name="pref_camera_picturesize_entry_vga">VGA</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_scenemode_title">Scene mode</string>
    <string name="pref_camera_scenemode_entry_hdr">HDR</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="pref_camera_hdr_default">@string/setting_off_value</string>
    <string name="clear_effects">Clear effects</string>
    <string name="effect_silly_faces">SILLY FACES</string>
    <string name="effect_background">BACKGROUND</string>
    <string name="filtershow_undo">Undo</string>
    <string name="filtershow_redo">Redo</string>
    <string name="show_history_panel">Show History</string>
    <string name="show_imagestate_panel">Show Image State</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="photoeditor_undo">Undo</string>
    <string name="photoeditor_redo">Redo</string>
    <string name="set_image">Set picture as</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="share_panorama">Share panorama</string>
    <string name="slideshow">Slideshow</string>
    <string name="details">Details</string>
    <string name="show_on_map">Show on map</string>
    <string name="rotate_left">Rotate left</string>
    <string name="rotate_right">Rotate right</string>
    <string name="edit">Edit</string>
    <string name="crop_action">Crop</string>
    <string name="trim_action">Trim</string>
    <string name="Import">Import</string>
    <string name="widget_type_album">Choose an album</string>
    <string name="widget_type_shuffle">Shuffle all images</string>
    <string name="widget_type_photo">Choose an image</string>
</resources>