<?xml version="1.0" encoding="utf-8"?>














<menu
  xmlns:android="http://schemas.android.com/apk/res/android"><item android:id="@id/action_import" android:title="@string/Import" android:icon="@drawable/ic_menu_ptp_holo_light" android:showAsAction="always|withText" android:visible="false"



 />



    <item android:id="@id/action_share_panorama" android:title="@string/share_panorama" android:icon="@drawable/ic_menu_share_holo_light" android:showAsAction="ifRoom" android:visible="false" android:actionProviderClass="android.widget.ShareActionProvider"




 />
    <item android:id="@id/action_share" android:title="@string/share" android:icon="@drawable/ic_menu_share_holo_light" android:showAsAction="never" android:visible="false" android:actionProviderClass="android.widget.ShareActionProvider"




 />
    <item android:id="@id/action_delete" android:title="@string/delete" android:icon="@drawable/ic_menu_trash_holo_light" android:showAsAction="never" android:visible="false"



 />
    <item android:id="@id/action_slideshow" android:title="@string/slideshow" android:icon="@drawable/ic_menu_slideshow_holo_light" android:showAsAction="never"


 />
    <item android:id="@id/action_edit" android:title="@string/edit" android:showAsAction="never" android:visible="false"


 />
    <item android:id="@id/action_rotate_ccw" android:title="@string/rotate_left" android:showAsAction="never"

 />
    <item android:id="@id/action_rotate_cw" android:title="@string/rotate_right" android:showAsAction="never"

 />
    <item android:id="@id/action_crop" android:title="@string/crop_action" android:showAsAction="never"

 />
    <item android:id="@id/action_trim" android:title="@string/trim_action" android:showAsAction="never"

 />
    <item android:id="@id/action_setas" android:title="@string/set_image" android:showAsAction="never"

 />
    <item android:id="@id/action_details" android:title="@string/details" android:showAsAction="never"

 />
    <item android:id="@id/action_show_on_map" android:title="@string/show_on_map" android:showAsAction="never"

 />
</menu>
