<menu
  xmlns:android="http://schemas.android.com/apk/res/android"><item android:id="@id/menu_share" android:actionProviderClass="android.widget.ShareActionProvider" android:showAsAction="always" android:enabled="false" android:title="@string/share"




 />
    <item android:id="@id/undoButton" android:showAsAction="never" android:title="@string/filtershow_undo" android:icon="@drawable/filtershow_button_undo"



 />
    <item android:id="@id/redoButton" android:showAsAction="never" android:title="@string/filtershow_redo" android:icon="@drawable/filtershow_button_redo"



 />
    <item android:id="@id/resetHistoryButton" android:title="@string/reset"

 />
    <item android:id="@id/operationsButton" android:showAsAction="never" android:title="@string/show_history_panel" android:icon="@drawable/filtershow_button_operations" android:visible="true"




 />
    <item android:id="@id/showImageStateButton" android:showAsAction="never" android:title="@string/show_imagestate_panel" android:visible="false"



 />
</menu>
