<?xml version="1.0" encoding="utf-8"?>














<com.android.camera.ui.EffectSettingPopup style="@style/SettingPopupWindow"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/popup_background" android:layout_height="wrap_content" android:layout_width="@dimen/big_setting_popup_window_width"


>
        <FrameLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:minHeight="@dimen/popup_title_frame_min_height"


>
            <TextView android:id="@id/title" style="@style/PopupTitleText"
 />
        </FrameLayout>
        <View style="@style/PopupTitleSeparator" />
        <ScrollView android:layout_height="wrap_content" android:layout_width="fill_parent"

>
            <LinearLayout android:orientation="vertical" android:layout_height="wrap_content" android:layout_width="fill_parent"


>
                <TextView android:background="@drawable/bg_pressed" android:minHeight="@dimen/effect_setting_clear_text_min_height" android:id="@id/clear_effects" android:text="@string/clear_effects" android:textSize="@dimen/effect_setting_clear_text_size" style="@style/EffectSettingTypeTitle"




 />
                <TextView android:id="@id/effect_silly_faces_title" android:text="@string/effect_silly_faces" android:visibility="gone" style="@style/EffectSettingTypeTitle"


 />
                <View android:id="@id/effect_silly_faces_title_separator" android:visibility="gone" style="@style/EffectTypeSeparator"

 />
                <com.android.camera.ui.ExpandedGridView android:id="@id/effect_silly_faces" style="@style/EffectSettingGrid"
 />
                <View android:id="@id/effect_background_separator" android:visibility="gone" style="@style/EffectTitleSeparator"

 />
                <TextView android:id="@id/effect_background_title" android:text="@string/effect_background" android:visibility="gone" style="@style/EffectSettingTypeTitle"


 />
                <View android:id="@id/effect_background_title_separator" android:visibility="gone" style="@style/EffectTypeSeparator"

 />
                <com.android.camera.ui.ExpandedGridView android:id="@id/effect_background" android:visibility="gone" style="@style/EffectSettingGrid"

 />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</com.android.camera.ui.EffectSettingPopup>
